--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ travis-ci = { repository = "inotify-rs/inotify-sys" }
 
 [dependencies]
 libc = "0.2"
+
+[target.'cfg(target_os = "freebsd")'.build-dependencies]
+pkg-config = "0.3.28"
